tests/expectations/compiler/structs/external_struct_2.out
Error [EPAR0370005]: expected '}', '@', 'record', 'constructor', 'fn', 'mapping', 'storage' -- found 'struct'
    --> compiler-test:2:5
     |
   2 |     struct Foo {
     |     ^^^^^^
